# tpu-perf

./: CMakeLists.txt
.github/workflows/: build.sh  ci.yaml
benchmark/: interface.cpp  interface.h  runner.cpp  runner.h
pipeline/: interface.cpp
python/tpu_perf/: benchmark.py  build.py  buildtree.py  infer.py  logger.py  make_table.py  precision_benchmark.py  refine_state.py  run.py  subp.py  util.py
